# azure-ml-iris-pipeline

./: .env.example  .gitignore  README.md  conda.yaml  conda_inference.yaml  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
configs/: config.yaml
deploy/: deploy.py  test_endpoint.py
scripts/: assign_identity  submit_endpoint_creation_job  test_api  verify_identity
setup/: setup_compute.py  setup_environment.py
src/: register_model.py  score.py  select_best.py  train.py
src/utils/: config.py
tests/: test_auth.py  test_config.py
