[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ml-iris-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "End-to-end Azure ML pipeline: train, select, register and deploy a Random Forest model"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 99

[tool.flake8]
max-line-length = 99
exclude = [".venv", "venv", "__pycache__"]

